# amazon-photos-mcp

./: .gitignore  README.md  pyproject.toml  setup-cookies.sh
amazon_photos_mcp/: __init__.py
docs/: PROJECT-STATUS.md
