[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-photos-mcp"
version = "0.1.0"
description = "FastMCP server for Amazon Photos — search, browse, upload, download, and manage your photo library"
requires-python = ">=3.10.10"
dependencies = [
    "fastmcp>=2.0.0",
    "amazon-photos @ git+https://github.com/kpfitzgerald/amazon_photos.git@main",
    "httpx",
    "pyarrow",
]

[project.scripts]
amazon-photos-mcp = "amazon_photos_mcp:main"
